--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file=.env ./src/index.js"
+    "dev": "node --env-file=.env ./src/index.js",
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
