--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file=.env ./src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node --env-file=.env ./src/index.js"
   },
   "keywords": [],
   "author": "",
